--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "0.1"
+version = "1.7.10-0.1"
 group= "com.belgabor.mcpatcher" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "MagneticraftPatcher"
 
