--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ minecraft {
 
 jar {
     manifest {
-        attributes 'FMLCorePlugin': 'mods.belgabor.mcpatcher.MCPatcherPlugin'
+        attributes 'FMLCorePlugin': 'mods.belgabor.mcpatcher.MCPatcherMod'
         attributes 'FMLCorePluginContainsFMLMod': 'true'
     }
 }
